# mini-codex2

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  minicodex2.example.toml  pyproject.toml  run_benchmark_fake.bat  run_benchmark_real.bat  run_tui.bat  run_tui_aihub2api_openai.bat  run_tui_deepseek.bat  run_tui_gpt4mini.bat  run_tui_gpt55.bat
docs/: agent-os-outlook.md  agent-runtime-boundaries.md  agentos-skill-boundary.md  api.md  architecture.md  cache-optimization-notes.md  code-world-robot.md  configuration.md  context.md  events.md  failure-handling.md  model-adapters.md  verification.md  wechat-code-agent-popular-science.md
src/minicodex2/agent/: chat_history.py  code_runtime.py  collaboration_advisor.py  compaction.py  context.py  context_buffer.py  events.py  failure_pack.py  logging.py  memory_extractor.py  project_memory.py  result.py  token_usage.py  unified_session.py
src/minicodex2/agent_os/: __init__.py  goal_controller.py  state.py
src/minicodex2/api/: server.py
src/minicodex2/benchmark/: __init__.py  cases.py  runner.py  types.py
src/minicodex2/cli/: main.py
src/minicodex2/config/: settings.py
src/minicodex2/decision/: continuation.py  dependency_policy.py  diagnostic_policy.py  failure_classifier.py  types.py
src/minicodex2/display/: __init__.py  catalog_en_us.py  (+2 more)
tests/integration/: test_agent_loop.py  test_api.py  test_benchmark.py  test_events.py  test_real_model_smoke.py  test_tui_pilot.py  test_verification_runtime.py  tui_visual_smoke.py
tests/unit/: test_compilers.py  test_core.py  test_entrypoints_and_docs.py
(+57 files in other folders)
